# mouse-trajectory-synthesis

./: .gitignore  CITATION.cff  EXPERIMENTS.md  HANDOFF.md  LICENSE  METHODOLOGY.md  NOTICE  PLAN.md  README.md  RESEARCH.md  RL_PILOT.md  _analyze_corr.py  _top5.py  autoresearch.py  autoresearch_flow.py  autoresearch_ouhj.py  autoresearch_residual.py  autoresearch_results.json  autoresearch_shape.py  autoresearch_wave3.py  autoresearch_wave4.py  autoresearch_wave6.py  autoresearch_wave9.py  autoresearch_wave_focused.py  detector_raw.py  diag_boundary_speed.py  diag_by_distance.py  diag_event_stream.py  diag_macc_atom.py  diagnose_features.py  evaluate.py  event_codec.py  external_detectors.py  features.py  generate.py  generate_figures.py  parity_check.py  program.md  proxy_metric_validation.py  pyproject.toml  (+27 more)
experiments/: _common.py  candi.py  cfm_unet.py  chunk_diffusion.py  corpus_blend.py  corpus_perturb.py  corpus_perturb_full.py  corpus_perturb_low.py  corpus_perturb_v3.py  corpus_perturb_v4.py  corpus_perturb_v5.py  corpus_perturb_v6.py  corpus_perturb_v7.py  corpus_replay.py  corpus_replay_v2.py  corpus_rotate.py  corpus_sim.py  ddpm_arclen.py  ddpm_stall_injection.py  event_infill_polar.py  event_replay.py  event_replay_polar.py  event_stream.py  event_stream_polar.py  mjt.py  novelty_check.py  novelty_check_results.json  residual_analysis.py  residual_analysis_results.json  soundstorm.py  traj_diffusion.py  vqvae_ar_transformer.py  vqvae_ar_transformer_no_stall.py  zimt.py  zimt_curvature_timing.py  zimt_fm.py  zimt_grpo.py  zimt_guided.py  zimt_magcorr.py  (+5 more)
(+107 files in other folders)
